--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             </div>
             <div class="links">
                 <a href="" class="#top">Home</a>
-                <a href="" class="">About</a>
-                <a href="" class="">Shop</a>
-                <a href="" class="">Contact</a>
+                <a href="" class="#about">About</a>
+                <a href="" class="#shop">Shop</a>
+                <a href="" class="#contact">Contact</a>
             </div>
         </nav>
     </header>
@@ -33,5 +33,57 @@
         <h2>Our Story</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero qui consequuntur, inventore harum incidunt aspernatur vitae assumenda, eligendi quae accusamus odio eaque quas, culpa hic doloribus corrupti suscipit aliquam dolorum?</p>
     </section>
+    <sectio id="shop">
+        <h2>Our Plants</h2>
+        <div class="wrapper">
+            <div class="shop-bg succulants"></div>
+            <div class="text">
+                <div>
+                    <h3>succulants</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi blanditiis ipsam velit quasi tempore ab quaerat facilis minima perspiciatis, ipsa, sequi vitae dolores quia. Esse praesentium fugiat quaerat inventore. Quisquam.</p>
+                    <button>Shop Now!</button>
+                </div>
+            </div>
+        </div>
+        <div class="wrapper">
+            <div class="text">
+                <div>
+                    <h3>Cacti</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi corporis illum consequatur totam eos animi, quam recusandae ad dolore. Voluptatum error at quos vitae quis, accusamus possimus soluta est reiciendis.</p>
+                    <button>Shop Now!</button>
+                </div>div>
+            </div>
+        </div>
+        <div class="wrapper">
+            <div class="text">
+                <div>
+                    <h3>Tropicals</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa omnis odit quisquam natus neque voluptas doloribus, minima quis dignissimos nulla, eaque molestiae laudantium. Aliquam similique fugit, nam iusto numquam expedita?
+                    </p>
+                    <button>Shop Now!</button>
+                </div>
+            </div>
+        </div>
+    </sectio>
+    <footer id="contact">
+        <h2>Get In Touch!</h2>
+        <div class="left">
+            <div>
+                <h3>Find Us Here:</h3>
+                <address>
+                    123 Plant Lane<br>
+                    Bloomield Ontario<br>
+                    Canda L2G 0X7
+                </address>
+                <a href="tel:613-978-8282">613-978-8282</a>
+                <a href="mailto:info@thewateringcan.ca">info@thewateringcan.ca</a>
+                <p>@thwateringcan on the socials</p>
+            </div>
+        </div>
+        <div class="right">
+            <img src="images/shop.jpg">
+            <p>copyright Anthony Miller</p>
+        </div>
+    </footer>
 </body>
 </html>
